--- a/Money-Bunny/package.json
+++ b/Money-Bunny/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser-dynamic": "~11.2.9",
     "@angular/router": "~11.2.9",
     "@popperjs/core": "^2.9.2",
+    "@types/jquery": "^3.5.5",
     "bootstrap": "^4.6.0",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
