--- a/Money-Bunny/package.json
+++ b/Money-Bunny/package.json
@@ -22,8 +22,11 @@
     "@popperjs/core": "^2.9.2",
     "@types/jquery": "^3.5.5",
     "bootstrap": "^4.6.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
+    "mysql": "^2.18.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -33,6 +36,8 @@
     "@angular-devkit/build-angular": "~0.1102.8",
     "@angular/cli": "~11.2.8",
     "@angular/compiler-cli": "~11.2.9",
+    "@types/body-parser": "^1.19.0",
+    "@types/express": "^4.17.11",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
