--- a/Money-Bunny/package.json
+++ b/Money-Bunny/package.json
@@ -19,17 +19,23 @@
     "@angular/platform-browser": "~11.2.9",
     "@angular/platform-browser-dynamic": "~11.2.9",
     "@angular/router": "~11.2.9",
+    "@okta/jwt-verifier": "^2.1.0",
     "@popperjs/core": "^2.9.2",
+    "@types/cors": "^2.8.10",
     "@types/jquery": "^3.5.5",
     "bootstrap": "^4.6.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-bearer-token": "^2.4.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "mysql": "^2.18.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
+    "sqlite": "^4.0.21",
+    "tsc": "^1.20150623.0",
     "tslib": "^2.0.0",
+    "typeorm": "^0.2.32",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
@@ -51,6 +57,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.1.5"
+    "typescript": "^4.1.5"
   }
 }
