--- a/Money-Bunny/package.json
+++ b/Money-Bunny/package.json
@@ -23,6 +23,8 @@
     "@popperjs/core": "^2.9.2",
     "@types/cors": "^2.8.10",
     "@types/jquery": "^3.5.5",
+    "apisauce": "^2.1.1",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
