--- a/Money-Bunny/angular.json
+++ b/Money-Bunny/angular.json
@@ -130,6 +130,10 @@
               "devServerTarget": "Money-Bunny:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
     }
