--- a/Money-Bunny/package.json
+++ b/Money-Bunny/package.json
@@ -14,7 +14,7 @@
     "@angular/animations": "^11.2.11",
     "@angular/common": "^11.2.11",
     "@angular/compiler": "^11.2.11",
-    "@angular/core": "^11.2.11",
+    "@angular/core": "^11.2.12",
     "@angular/fire": "^6.1.4",
     "@angular/forms": "^11.2.11",
     "@angular/platform-browser": "^11.2.11",
@@ -31,6 +31,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-bearer-token": "^2.4.0",
+    "firebase": "^7.0 || ^8.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "mysql": "^2.18.1",
@@ -40,10 +41,10 @@
     "tsc": "^1.20150623.0",
     "tslib": "^2.0.0",
     "typeorm": "^0.2.32",
-    "zone.js": "~0.11.3",
-    "firebase": "^7.0 || ^8.0"
+    "zone.js": "~0.11.3"
   },
   "devDependencies": {
+    "@angular-devkit/architect": ">= 0.900 < 0.1200",
     "@angular-devkit/build-angular": "^0.1102.10",
     "@angular/cli": "^11.2.10",
     "@angular/compiler-cli": "^11.2.11",
@@ -52,6 +53,10 @@
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "firebase-tools": "^9.10.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.1.0",
@@ -59,15 +64,10 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "open": "^7.0.3",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "^4.1.5",
-    "@angular-devkit/architect": ">= 0.900 < 0.1200",
-    "firebase-tools": "^8.0.0",
-    "fuzzy": "^0.1.3",
-    "inquirer": "^6.2.2",
-    "inquirer-autocomplete-prompt": "^1.0.1",
-    "open": "^7.0.3"
+    "typescript": "^4.1.5"
   }
 }
