--- a/Money-Bunny/package.json
+++ b/Money-Bunny/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^11.2.11",
     "@angular/platform-browser-dynamic": "^11.2.11",
     "@angular/router": "^11.2.11",
+    "@babel/runtime-corejs3": "^7.14.0",
     "@okta/jwt-verifier": "^2.1.0",
     "@popperjs/core": "^2.9.2",
     "@types/cors": "^2.8.10",
@@ -36,6 +37,7 @@
     "firebase": "^7.0 || ^8.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
+    "jspdf": "^2.3.1",
     "jspdf-autotable": "^3.5.14",
     "mysql": "^2.18.1",
     "popper.js": "^1.16.1",
