--- a/Money-Bunny/package.json
+++ b/Money-Bunny/package.json
@@ -17,10 +17,12 @@
     "@angular/core": "^11.2.13",
     "@angular/fire": "^6.1.4",
     "@angular/forms": "^11.2.11",
+    "@angular/localize": "^11.2.13",
     "@angular/platform-browser": "^11.2.11",
     "@angular/platform-browser-dynamic": "^11.2.11",
     "@angular/router": "^11.2.11",
     "@babel/runtime-corejs3": "^7.14.0",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.1",
     "@okta/jwt-verifier": "^2.1.0",
     "@popperjs/core": "^2.9.2",
     "@types/cors": "^2.8.10",
